Update and rename Hands_On_RDM_Presentation.html to index.html

--- a/index.html
+++ b/index.html
@@ -1958,7 +1958,7 @@ v03     | 2026-01-18 | MKT    | Revised stats
                     <strong>Thank you for attending!</strong><br><br>
                     <strong>Kay P Maye</strong><br>
                     Howard-Tilton Memorial Library | Tulane University<br>
-                    Questions? Contact your subject librarian or research data services.
+                    Questions? Contact your subject librarian or data@tulane.edu.
                 </div>
 
                 <div class="slide-footer">Kay P Maye | Tulane University Libraries</div>
